--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ h1 {
     width: 18vmin;
     border-radius: 1rem;
     border: none;
-    box-shadow: 0 0 1rem rgba(0,0,0,0.4);
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.4);
     font-size: 8vmin;
     color: #b0413e;
     background: #ffffc7;
