--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 * {
     margin: 0;
     padding: 0;
+    user-select: none;
+    box-sizing: border-box;
 }
 
 body {
@@ -92,6 +94,7 @@ h1 {
     .box {
         height: 110px;
         width: 110px;
+        font-size: 9vmin;
     }
 
     .game {
@@ -113,6 +116,7 @@ h1 {
     .box {
         height: 100px;
         width: 100px;
+        font-size: 10vmin;
     }
 
     .game {
